--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ dev = [
     'pytest',
     'pytest-asyncio',
 ]
+fast = [
+    'fastapi'
+]
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
